@@ -1,3 +1,10 @@
+2011-04-06  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
+
+	* Add FiltersToolbox/seg2dmat.m: v0.1.0
+
+	- SEG2DMAT Local neighbourhood distance matrix between
+	segmentation voxels.
+
 2011-04-05  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
 	* Add FiltersToolbox/scinrrd_seg2vesselness.m: v0.1.0
